[package]
name = "postgres-enum"
version = "0.1.0"
authors = ["enfipy <enfipy@gmail.com>", "olvyko <olvyko@gmail.com>"]
edition = "2018"

[dependencies]
postgres-enum-derive = { path = "../postgres-enum-derive" }
postgres-types = "0.1.1"
postgres-protocol = "0.5"
bytes = "0.5.4"

[dev-dependencies]
num_enum = "0.5"
